refactor: compose spool dependencies
Make tools.deps the sole spool acquisition path, resolve configured modules from the generation basis, compose the workspace from its six independent roots, and remove obsolete release, documentation, diagnostic, and structural-test residue.